Ensure hotbar visible with PF2e HUD

--- a/module/css/pf2e-hud.css
+++ b/module/css/pf2e-hud.css
@@ -152,6 +152,11 @@
   border: 2px dotted var(--color-warm-5);
   box-shadow: var(--box-shadow);
 }
+#pf2e-hud-persistent #hotbar {
+  display: flex !important;
+  visibility: visible;
+  opacity: 1;
+}
 #pf2e-hud-persistent #hotbar #action-bar {
   gap: 5px;
 }
